--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -41,10 +41,29 @@ label .upload-group{
     display: block;
     text-align: center;
     margin-bottom: 100px;
+    border: 6px solid rgb(63,81,181);
+    border: 6px solid rgb(63,81,181);
+    border: 6px solid rgb(63,81,181);
 }
 
 #photo-caption-div{
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+}
+
+#footer-div-home{
+    position: relative;
+    bottom: 0px;
+    right: 0px;
+    display: flex;
+    justify-content: space-evenly;
+    color:  white;
+    text-align: center;
+    padding-top: 20px;
+    padding-left: 25px;
+    width: 100%;
+    padding-bottom: 10px;
+    background-color: rgb(63,81,181);
+    font-family: 'Merriweather serif';
 }
